(executable
 (name main)
 (public_name irmin-tree-serialisation)
 (package irmin-tree-serialisation)
 (libraries
   logs.fmt
   hashset
   digestif
   index
   irmin
   irmin-pack
   irmin-my_lwt
   lwt
   lwt.unix
   tezos-crypto
   tezos-error-monad
   data-encoding
   ocplib-endian
   fmt))

(env (_ (ocamlopt_flags (:standard -compact))))
